[GH-29] chore: update dependencies and plugins versions