@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.5</version>
+    <version>3.4.6</version>
     <relativePath/>
   </parent>
 
@@ -56,11 +56,11 @@
 
     <!-- Spring -->
     <spring-cloud.version>2024.0.1</spring-cloud.version>
-    <spring-boot-admin.version>3.4.5</spring-boot-admin.version>
+    <spring-boot-admin.version>3.4.6</spring-boot-admin.version>
 
     <!-- Observability -->
-    <opentelemetry.version>1.49.0</opentelemetry.version>
-    <opentelemetry-api-incubator.version>1.49.0-alpha</opentelemetry-api-incubator.version>
+    <opentelemetry.version>1.50.0</opentelemetry.version>
+    <opentelemetry-api-incubator.version>1.50.0-alpha</opentelemetry-api-incubator.version>
 
     <!-- API -->
     <springdoc-openapi.version>2.8.8</springdoc-openapi.version>
@@ -68,26 +68,26 @@
     <graphql-java-extended-scalars.version>22.0</graphql-java-extended-scalars.version>
 
     <!-- Testing -->
-    <cucumber.version>7.22.0</cucumber.version>
-    <testcontainers.version>1.20.6</testcontainers.version>
-    <awaitility.version>4.2.2</awaitility.version>
+    <cucumber.version>7.22.2</cucumber.version>
+    <testcontainers.version>1.21.0</testcontainers.version>
+    <awaitility.version>4.3.0</awaitility.version>
     <de.flapdoodle.embed.mongo.spring3x.version>4.20.0</de.flapdoodle.embed.mongo.spring3x.version>
-    <archunit-junit5.version>1.4.0</archunit-junit5.version>
-    <instancio-junit.version>5.4.0</instancio-junit.version>
+    <archunit-junit5.version>1.4.1</archunit-junit5.version>
+    <instancio-junit.version>5.4.1</instancio-junit.version>
     <jmh.version>1.37</jmh.version>
     <junit-platform-suite.version>1.12.2</junit-platform-suite.version>
 
     <!-- Quality -->
-    <chaos-monkey-spring-boot.version>3.2.0</chaos-monkey-spring-boot.version>
+    <chaos-monkey-spring-boot.version>3.2.2</chaos-monkey-spring-boot.version>
     <jspecify.version>1.0.0</jspecify.version>
     <mapstruct.version>1.6.3</mapstruct.version>
 
     <!-- Database -->
-    <couchbase-java-client.version>3.8.0</couchbase-java-client.version>
+    <couchbase-java-client.version>3.8.1</couchbase-java-client.version>
 
     <!-- GRPC -->
     <grpc-server-spring-boot-starter.version>3.1.0.RELEASE</grpc-server-spring-boot-starter.version>
-    <protobuf-java.version>4.30.2</protobuf-java.version>
+    <protobuf-java.version>4.31.0</protobuf-java.version>
     <io-grpc.version>1.63.0</io-grpc.version>
 
     <!-- Build Tools -->
@@ -102,11 +102,18 @@
     <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     <pitest-maven.version>1.19.1</pitest-maven.version>
     <flatten-maven-plugin.version>1.7.0</flatten-maven-plugin.version>
-    <git-commit-id-maven-plugin.version>9.0.1</git-commit-id-maven-plugin.version>
-    <openapi-generator-maven-plugin.version>7.12.0</openapi-generator-maven-plugin.version>
+    <git-commit-id-maven-plugin.version>9.0.2</git-commit-id-maven-plugin.version>
+    <openapi-generator-maven-plugin.version>7.13.0</openapi-generator-maven-plugin.version>
     <spotbugs-maven-plugin.version>4.9.3.0</spotbugs-maven-plugin.version>
     <rewrite-maven-plugin.version>6.6.1</rewrite-maven-plugin.version>
     <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
+    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
+    <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
+    <sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
+    <git-changelog-maven-plugin.version>2.2.5</git-changelog-maven-plugin.version>
+    <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+    <sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
 
     <!-- Sonar -->
     <sonar.organization>juanpablojimenezesclusa</sonar.organization>
@@ -249,19 +256,6 @@
             </image>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>3.3.0</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
 
         <!-- Git Info -->
         <plugin>
@@ -295,7 +289,7 @@
         <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>5.1.0.4751</version>
+          <version>${sonar-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
@@ -389,7 +383,7 @@
         <plugin>
           <groupId>se.bjurr.gitchangelog</groupId>
           <artifactId>git-changelog-maven-plugin</artifactId>
-          <version>2.2.5</version>
+          <version>${git-changelog-maven-plugin.version}</version>
           <inherited>false</inherited>
           <executions>
             <execution>
@@ -429,12 +423,46 @@
         <plugin>
           <groupId>org.xolstice.maven.plugins</groupId>
           <artifactId>protobuf-maven-plugin</artifactId>
-          <version>0.6.1</version>
+          <version>${protobuf-maven-plugin.version}</version>
           <configuration>
             <protocArtifact>com.google.protobuf:protoc:${protobuf-java.version}:exe:${os.detected.classifier}</protocArtifact>
             <pluginId>grpc-java</pluginId>
             <pluginArtifact>io.grpc:protoc-gen-grpc-java:${io-grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
           </configuration>
+        </plugin>
+
+        <!-- Testing -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              -javaagent:"${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.5/byte-buddy-agent-1.17.5.jar"
+            </argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED
+              -javaagent:"${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.5/byte-buddy-agent-1.17.5.jar"
+            </argLine>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
